--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ license = {text = "GNU General Public License v3"}
 requires-python = ">=3.10"
 classifiers = []
 dependencies = [
-
+    "moviepy>=1.0.3",
+    "numpy>=1.20.0",
+    "torch>=1.13.0",
 ]
 
 
